zh-cn/15.3/admin/synonym-guide.rst
========
同义词词典
========

概述
====

可以管理意义相同的单词(GB、gigabyte 等)的同义词。

管理方法
======

显示方法
------

要打开下图所示的同义词配置列表页面,请在左侧菜单中选择[系统 > 词典],然后单击 synonym。

|image0|

单击配置名称进行编辑。

配置方法
------

要打开同义词配置页面,请单击"新建"按钮。

|image1|

配置项
------

关于索引创建,由于标准配置为 bi-gram,因此需要注册时使转换后的单词不是 1 个字符。
另外,注册同义词时需要按以下方式注册。

* 平假名以片假名注册
* 小写片假名以大写片假名注册
* 全角字母数字以半角字母数字注册
* 同义词不重复注册

转换前
:::::

输入要作为同义词处理的目标单词。

转换后
:::::

将转换前输入的单词用转换后的单词展开。
例如,要将"TV"作为"TV"和"テレビ"处理时,在转换前输入"TV",在转换后输入"TV"和"テレビ"。

下载
=========

可以按 Apache Lucene 提供的同义词词典格式下载。

上传
=========

可以按 Apache Lucene 提供的同义词词典格式上传。
由于同义词是将某个单词组替换为另一个单词组,因此词典描述使用逗号(,)和转换(=>)。
例如,要将"TV"替换为"テレビ"时,使用 => 按如下方式描述。

::

    TV=>テレビ

要将"fess"和"フェス"作为相同的内容处理时,按如下方式描述。

::

    fess,フエス=>fess,フエス

在上述情况下,也可以省略 => 按如下方式描述。

::

    fess,フエス


.. |image0| image:: ../../../resources/images/en/15.3/admin/synonym-1.png
.. |image1| image:: ../../../resources/images/en/15.3/admin/synonym-2.png
